--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title:
             </div> -->
     </div>
     <div class="container">
-    <div class="title"><h1>YRS Festival of Code 6<sup>th &rarr; 11<sup>th</sup> August, 2012</h1></div>
+    <div class="title"><h1>YRS Festival of Code 6<sup>th</sup> &rarr; 11<sup>th</sup> August, 2012</h1></div>
 
 	<iframe width="560" height="315" src="http://www.youtube-nocookie.com/embed/2Ws57UT_xX0" frameborder="0" allowfullscreen></iframe>
 
