Issy can be emailed, too

--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,7 @@ title: Contact Us
 
                 <li><p><a href="mailto:emma@rewiredstate.org.">Emma</a> &#8212; Sponsors, Organization, and Press</p></li>
 
-                <li><p><a href="http://twitter.com/#!/youngrewired">Issy</a> &#8212; for social media (Facebook, Twitter)</p></li>
+                <li><p><a href="http://twitter.com/#!/youngrewired">Issy</a> &#8212; for social media (or <a href="mailto:isabell@youngrewiredstate.org">drop her an email</a>)</p></li>
 
                 <li><p><a href="mailto:hello@youngrewiredstate.org">All other enquiries</a></p></li>
             </ul>
