Adam is taking on mentors. Fix case inconsistencies

--- a/contact/index.html
+++ b/contact/index.html
@@ -14,17 +14,15 @@ title: Contact Us
 
             We are:
             <ul>
-                <li><p><a href="mailto:lawrence@rewiredstate.org.">Lawrence</a> &#8212;  if you're a young person with questions about YRS</p></li>
-
-                <li><p><a href="mailto:dave@bowsy.co.uk">Dave</a> &#8212; if you're a mentor, or would like to find out more about mentoring</p></li>
+                <li><p><a href="mailto:lawrence@rewiredstate.org.">Lawrence</a> &#8212; if you're a young person with questions about YRS</p></li>
 
                 <li><p><a href="mailto:angijlong@gmail.com">Angi</a> &#8212; parents: if you've got questions</p></li>
 
-                <li><p><a href="mailto:ncford@gmail.com">Neil</a> &#8212; centres, or prospective centres</p></li>
+                <li><p><a href="mailto:neil@youngrewiredstate.org">Neil</a> &#8212; centres, or prospective centres</p></li>
 
-                <li><p><a href="mailto:adam@rewiredstate.org.">Adam</a> &#8212; for Bletchley Park/TNOMC/Festival of Code</p></li>
+                <li><p><a href="mailto:adam@rewiredstate.org.">Adam</a> &#8212; for mentors, Bletchley Park/TNOMC/Festival of Code, operations stuff</p></li>
 
-                <li><p><a href="mailto:emma@rewiredstate.org.">Emma</a> &#8212; Sponsors, Organization, and Press</p></li>
+                <li><p><a href="mailto:emma@rewiredstate.org.">Emma</a> &#8212; sponsors, organization, and press</p></li>
 
                 <li><p><a href="http://twitter.com/#!/youngrewired">Issy</a> &#8212; for social media (or <a href="mailto:isabell@youngrewiredstate.org">drop her an email</a>)</p></li>
 
