Thank you Agant

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -71,7 +71,7 @@ title: Sponsors
     </div><!-- closing container -->
 </div><!-- closing section 6 -->
 
-<div id="section 7">
+<div id="section7">
     <div class="container">
 	<h5>Prefects</h5>
 	<p>Mrs. Mulqueeny, the School Secretary is welcoming nominations for prefects, she can be contacted on the <a href="mailto:hello@youngrewiredstate.org">usual address</a>.</p> 
@@ -81,6 +81,11 @@ title: Sponsors
 <div id="section8">
     <div class="container">
         <h6>Line Leaders</h6>
+
+	    <div class="grid3">
+                <p><a href="http://agant.com/"><img alt="Agant" src="/img/sponsors/agant.png" /></a></p>
+            </div><!-- closing grid3 -->
+
 	    <div class="grid3">
                 <p><a href="http://www.bcs.org/"><img alt="British Computing Society" src="/img/sponsors/bcs.png" /></a></p>
             </div><!-- closing grid3 -->
