--- a/centres/index.html
+++ b/centres/index.html
@@ -7,9 +7,8 @@ title: Centres
         <div id="leftdivblog">
             <div class="title"><h1>Young Rewired State Centres</h1></div>
 
-            <!-- <iframe src="/centres/map.html" style="width: 100%; height: 600px;"></iframe>-->
+            <iframe src="https://cms.youngrewiredstate.org/data/api/centres.example" style="width: 100%; height: 620px;"></iframe>
 
-	    <h4>A map of the centres will appear in April</h4>
 
             <p>YRS centres are organisations across the UK who have space to host at least three young people. Ideally you would have some developers in-house, but we will send mentors and/or alumni for the week.
 
