--- a/centres/index.html
+++ b/centres/index.html
@@ -7,7 +7,7 @@ title: Centres
         <div id="leftdivblog">
             <div class="title"><h1>Young Rewired State Centres</h1></div>
 
-            <iframe src="https://cms.youngrewiredstate.org/data/api/centres.example" style="width: 100%; height: 620px;"></iframe>
+            <iframe src="https://cms.youngrewiredstate.org/data/api/centres.example" style="width: 100%; height: 620px; border: none;"></iframe>
 
 
             <p>YRS centres are organisations across the UK who have space to host at least three young people. Ideally you would have some developers in-house, but we will send mentors and/or alumni for the week.
