--- a/contact/index.html
+++ b/contact/index.html
@@ -14,13 +14,13 @@ title: Contact Us
 
             We are:
             <ul>
-                <li><p><a href="mailto:lawrence@rewiredstate.org">Lawrence</a> &#8212; if you're a young person with questions about YRS</p></li>
+                <li><p><a href="mailto:kids@youngrewiredstate.org">Lawrence and Kevin</a> &#8212; if you're a young person with questions about YRS</p></li>
 
                 <li><p><a href="mailto:angijlong@gmail.com">Angi</a> &#8212; parents: if you've got questions</p></li>
 
                 <li><p><a href="mailto:neil@youngrewiredstate.org">Neil</a> &#8212; centres, or prospective centres</p></li>
 
-                <li><p><a href="mailto:adam@rewiredstate.org">Adam</a> &#8212; for mentors, Bletchley Park/TNOMC/Festival of Code, operations stuff</p></li>
+                <li><p><a href="mailto:adam@youngrewiredstate.org">Adam</a> &#8212; for mentors, Bletchley Park/TNOMC/Festival of Code, operations stuff</p></li>
 
                 <li><p><a href="mailto:emma@rewiredstate.org">Emma</a> &#8212; sponsors, organization, and press</p></li>
 
