add in names, for anchor-linking

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: 2012
             </div> -->
     </div>
     <div class="container">
-    <div class="title"><h1>YRS Festival of Code 6<sup>th</sup> &rarr; 11<sup>th</sup> August, 2012</h1></div>
+    <div name="foc" id="foc" class="title"><h1>YRS Festival of Code 6<sup>th</sup> &rarr; 11<sup>th</sup> August, 2012</h1></div>
 
 	<iframe width="560" height="315" src="http://www.youtube-nocookie.com/embed/2Ws57UT_xX0" frameborder="0" allowfullscreen></iframe>
 
@@ -65,17 +65,17 @@ title: 2012
   <div class="container">
 
     <div class="grid3">
-      <h2>Learn from others</h2>
+      <h2 id="learn" name="learn">Learn from others</h2>
       <p>Learn more about programming by working with other programmers. Quiz mentors and other YRSers about the stuff you want to learn and share your knowledge too.</p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2>Build in teams</h2>
+      <h2 id="teams" name="teams">Build in teams</h2>
       <p>The opportunity to build something cool with a team of other talented young developers. Work on bringing your ideas to life in code and help other developers bring theirs to life too.</p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2>Join the community</h2>
+      <h2 id="community" name="community">Join the community</h2>
       <p>After the event you're automatically a part of the growing network of young developers across the UK. Lifetime friendships are born as well as businesses. Mentor relationships are forged so you're no longer coding alone.</p>
     </div><!-- closing grid3 -->
   </div><!-- closing container -->
@@ -84,30 +84,30 @@ title: 2012
 <div id="section3">
   <div class="container">
 
-    <div class="title"><h1>How can I get involved?</h1></div>
+    <div id="involve" name="involve" class="title"><h1>How can I get involved?</h1></div>
 
     <div class="grid3">
-      <h2>Young Programmers</h2>
+      <h2 id="kids" name="kids">Young Programmers</h2>
       <p>Heard enough? Sign up to attend the nearest Young Rewired
       State event to you. We already have events in Wales and England
       and there are more to come around the world, so watch this space.<br /><br /><a href="https://docs.google.com/a/rewiredstate.org/spreadsheet/viewform?formkey=dFJzUmRLOUVaSnZKWU42VVZaSmlPVkE6MA#gid=0">Sign up now &raquo;</a></p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2>Parents</h2>
+      <h2 id="parents" name="parents">Parents</h2>
       <p>Want to find out a little more about the people behind Young
         Rewired State? Talk with parents of past YRS attendees who have volunteered to help<br /><br /><a href="/parents/">Find out more &raquo;</a></p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2>Mentors</h2>
+      <h2 id="mentors" name="mentors">Mentors</h2>
       <p>Are you a geek over 18? Don't worry, you can sign up
       to become a Young Rewired State mentor and share
       your knowledge with YRS2012 attendees.<br /><br /><a href="/mentors/">Find out more &raquo;</a></p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2>Centres</h2>
+      <h2 id="centres" name="centres">Centres</h2>
       <p>Young Rewired State is a decentralized event that runs
       at multiple centres across the country. If you have some
       spare office space for a week and you're a technical
@@ -115,7 +115,7 @@ title: 2012
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2>Volunteer</h2>
+      <h2 id="volunteer" name="volunteer">Volunteer</h2>
       <p>We need volunteers to help run YRS2012, everything
       from copywriters to event organizers to community
       managers. If you have some spare time, drop us an email
@@ -123,7 +123,7 @@ title: 2012
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2>Donate</h2>
+      <h2 id="donate" name="donate">Donate</h2>
       <p>Young Rewired State is a not-for-profit organization, we don't
       take Intellectual Property and we definitely don't act as a big
       recruiting agency, we rely entirely on sponsorship and donations.
@@ -138,7 +138,7 @@ title: 2012
   <div class="container">
 
     <div class="grid3">
-      <h2>YRS2012 begins in only:</h2>
+      <h2 id="countdown" name="countdown">YRS2012 begins in only:</h2>
       <script language="JavaScript">
       TargetDate = "08/06/2012 10:00 AM";
       BackColor = "#000";
@@ -153,7 +153,7 @@ title: 2012
 
       <br />
 
-      <h2>On twitters</h2>
+      <h2 id="twitters" name="twitters">On twitters</h2>
       <script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script>
       <script>
         new TWTR.Widget({
