--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: 2012
             </div> -->
     </div>
     <div class="container">
-    <div name="foc" id="foc" class="title"><h1>YRS Festival of Code 6<sup>th</sup> &rarr; 11<sup>th</sup> August, 2012</h1></div>
+    <div id="foc" class="title"><h1>YRS Festival of Code 6<sup>th</sup> &rarr; 11<sup>th</sup> August, 2012</h1></div>
 
 	<iframe width="560" height="315" src="http://www.youtube-nocookie.com/embed/2Ws57UT_xX0" frameborder="0" allowfullscreen></iframe>
 
@@ -84,7 +84,7 @@ title: 2012
 <div id="section3">
   <div class="container">
 
-    <div id="involve" name="involve" class="title"><h1>How can I get involved?</h1></div>
+    <div id="involve" class="title"><h1>How can I get involved?</h1></div>
 
     <div class="grid3">
       <h2 id="kids" name="kids">Young Programmers</h2>
@@ -94,20 +94,20 @@ title: 2012
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2 id="parents" name="parents">Parents</h2>
+      <h2 id="parents">Parents</h2>
       <p>Want to find out a little more about the people behind Young
         Rewired State? Talk with parents of past YRS attendees who have volunteered to help<br /><br /><a href="/parents/">Find out more &raquo;</a></p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2 id="mentors" name="mentors">Mentors</h2>
+      <h2 id="mentors">Mentors</h2>
       <p>Are you a geek over 18? Don't worry, you can sign up
       to become a Young Rewired State mentor and share
       your knowledge with YRS2012 attendees.<br /><br /><a href="/mentors/">Find out more &raquo;</a></p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2 id="centres" name="centres">Centres</h2>
+      <h2 id="centres">Centres</h2>
       <p>Young Rewired State is a decentralized event that runs
       at multiple centres across the country. If you have some
       spare office space for a week and you're a technical
@@ -115,7 +115,7 @@ title: 2012
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2 id="volunteer" name="volunteer">Volunteer</h2>
+      <h2 id="volunteer">Volunteer</h2>
       <p>We need volunteers to help run YRS2012, everything
       from copywriters to event organizers to community
       managers. If you have some spare time, drop us an email
@@ -123,7 +123,7 @@ title: 2012
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2 id="donate" name="donate">Donate</h2>
+      <h2 id="donate">Donate</h2>
       <p>Young Rewired State is a not-for-profit organization, we don't
       take Intellectual Property and we definitely don't act as a big
       recruiting agency, we rely entirely on sponsorship and donations.
@@ -138,7 +138,7 @@ title: 2012
   <div class="container">
 
     <div class="grid3">
-      <h2 id="countdown" name="countdown">YRS2012 begins in only:</h2>
+      <h2 id="countdown">YRS2012 begins in only:</h2>
       <script language="JavaScript">
       TargetDate = "08/06/2012 10:00 AM";
       BackColor = "#000";
@@ -153,7 +153,7 @@ title: 2012
 
       <br />
 
-      <h2 id="twitters" name="twitters">On twitters</h2>
+      <h2 id="twitters">On twitters</h2>
       <script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script>
       <script>
         new TWTR.Widget({
