missed some. oops

--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@ title: 2012
   <div class="container">
 
     <div class="grid3">
-      <h2 id="learn" name="learn">Learn from others</h2>
+      <h2 id="learn">Learn from others</h2>
       <p>Learn more about programming by working with other programmers. Quiz mentors and other YRSers about the stuff you want to learn and share your knowledge too.</p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2 id="teams" name="teams">Build in teams</h2>
+      <h2 id="teams">Build in teams</h2>
       <p>The opportunity to build something cool with a team of other talented young developers. Work on bringing your ideas to life in code and help other developers bring theirs to life too.</p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2 id="community" name="community">Join the community</h2>
+      <h2 id="community">Join the community</h2>
       <p>After the event you're automatically a part of the growing network of young developers across the UK. Lifetime friendships are born as well as businesses. Mentor relationships are forged so you're no longer coding alone.</p>
     </div><!-- closing grid3 -->
   </div><!-- closing container -->
@@ -87,7 +87,7 @@ title: 2012
     <div id="involve" class="title"><h1>How can I get involved?</h1></div>
 
     <div class="grid3">
-      <h2 id="kids" name="kids">Young Programmers</h2>
+      <h2 id="kids">Young Programmers</h2>
       <p>Heard enough? Sign up to attend the nearest Young Rewired
       State event to you. We already have events in Wales and England
       and there are more to come around the world, so watch this space.<br /><br /><a href="https://docs.google.com/a/rewiredstate.org/spreadsheet/viewform?formkey=dFJzUmRLOUVaSnZKWU42VVZaSmlPVkE6MA#gid=0">Sign up now &raquo;</a></p>
