Thanks Shuttleworth foundation

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -51,6 +51,10 @@ title: Sponsors
         </div><!-- closing grid3 -->
 
         <div class="grid3">
+            <p><a href="http://www.shuttleworthfoundation.org/"><img alt="shuttleworth foundation" src="/img/sponsors/shuttleworth-funded.png" /></a></p>
+        </div><!-- closing grid3 -->
+
+        <div class="grid3">
             <p><a href="http://www.sleepydog.co.uk/"><img alt="Sleepydog" src="/img/sponsors/sleepydog.png" /></a></p>
         </div><!-- closing grid3 -->
 
