send kids to the /kids page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ title: 2012
       <h2 id="kids">Young Programmers</h2>
       <p>Heard enough? Sign up to attend the nearest Young Rewired
       State event to you. We already have events in Wales and England
-      and there are more to come around the world, so watch this space.<br /><br /><a href="https://docs.google.com/a/rewiredstate.org/spreadsheet/viewform?formkey=dFJzUmRLOUVaSnZKWU42VVZaSmlPVkE6MA#gid=0">Sign up now &raquo;</a></p>
+      and there are more to come around the world, so watch this space.<br /><br /><a href="/kids/">More info &raquo;</a></p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
