silly billy. prob triggy happy

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -52,7 +52,7 @@ title: Sponsors
 
         <div class="grid3">
             <p><a href="http://sendgrid.com/"><img alt="SendGrid" src="/img/sponsors/sendgrid.jpg" /></a></p>
-        </div><!-- closing grid3 ->
+        </div><!-- closing grid3 -->
 
         <div class="grid3">
             <p><a href="http://www.shuttleworthfoundation.org/"><img alt="shuttleworth foundation" src="/img/sponsors/shuttleworth-funded.png" /></a></p>
