change peoplefund.it references a wee bit

--- a/centres/index.html
+++ b/centres/index.html
@@ -42,7 +42,7 @@ title: Centres
 
 	    <h3>Money</h3>
 
-            <p>This event is free for young people to attend, but we are raising sponsorship money for necessities for the festival and a hardship fund for travel through <a href="http://www.peoplefund.it/young-rewired-state/">PeopleFund.it</a> as well as private donors, but this is not exactly easy this year!
+            <p>This event is free for young people to attend, but we are raising sponsorship money for necessities for the festival and a hardship fund for travel through <a href="http://www.peoplefund.it/young-rewired-state/">PeopleFund.it</a> as well as private donors, but this is not exactly easy this year! The next way to contribute financially to YRS will be coming soon!
 
 	    <br /><br />
 
