--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ title: 2012
       <p>Young Rewired State is a not-for-profit organization, we don't
       take Intellectual Property and we definitely don't act as a big
       recruiting agency, we rely entirely on sponsorship and donations.
-      We are using PeopleFund.it to raise 20k. <a href="mailto:hello@youngrewiredstate.org">Corporate sponsorship</a> is being raised privately.<br /><br /><a href="http://www.peoplefund.it/young-rewired-state/">Donate with PeopleFund.it &raquo;</a></p>
+      We used PeopleFund.it to raise 20k. <a href="mailto:hello@youngrewiredstate.org">Corporate sponsorship</a> is being raised privately.</p>
     </div><!-- closing grid3 -->
 
   </div><!-- closing container -->
