swapping apostrophes for commas in the sponsorship numbers

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -16,14 +16,14 @@ title: Sponsors
 <div id="section2">
     <div class="container">
         <h2>Chair of the Governors</h2>
-	<p>Position Vacant. Seeking payment of &pound;15'000. If you'd like to apply, <a href="mailto:hello@youngrewiredstate.org">School Secretary</a> would love to hear from you.</p>
+	<p>Position Vacant. Seeking payment of &pound;15,000. If you'd like to apply, <a href="mailto:hello@youngrewiredstate.org">School Secretary</a> would love to hear from you.</p>
     </div><!-- closing container -->
 </div><!-- closing section2 -->
 
 <div id="section3">
     <div class="container">
         <h2>Headmaster</h2>
-	<p>YRS2012 is currently without a Headmaster. Term starts in August, we'd appreciate applicants to apply (remember to include &pound;10'000 with your application!) before the middle of June. Again, please address your enquiries to the <a href="mailto:hello@youngrewiredstate.org">School Secretary</a>.</p>
+	<p>YRS2012 is currently without a Headmaster. Term starts in August, we'd appreciate applicants to apply (remember to include &pound;10,000 with your application!) before the middle of June. Again, please address your enquiries to the <a href="mailto:hello@youngrewiredstate.org">School Secretary</a>.</p>
     </div><!-- closing container -->
 </div><!-- closing section3 -->
 
