--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -7,9 +7,8 @@ title: Sponsors
     <div class="container">
     <div class="title"><h1>Young Rewired State Sponsors</h1></div>
         <p>We're enormously thankful to the following organizations
-        and people who've funded YRS2012. If you would like to make
-        a personal donation, please use our crowd-sourced
-        <a href-="http://www.peoplefund.it/young-rewired-state/">Peoplefund.it</a> page.<br /><br /> Thank you.</p>
+        and people who've funded YRS2012. We are also proud to have 
+	raised over £20,000 on <a href="http://www.peoplefund.it/young-rewired-state/">Peoplefund.it</a.<br /><br /> Thank you.</p>
     </div><!-- closing container -->
 </div><!-- closing section1 -->
 
