Change the wording of the sponsors page to thank people who donated through PeopleFund.it, not encourage them to do so anymore.

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -6,10 +6,7 @@ title: Sponsors
     <div class="container"></div>
     <div class="container">
     <div class="title"><h1>Young Rewired State Sponsors</h1></div>
-        <p>We're enormously thankful to the following organizations
-        and people who've funded YRS2012. If you would like to make
-        a personal donation, please use our crowd-sourced
-        <a href-="http://www.peoplefund.it/young-rewired-state/">Peoplefund.it</a> page.<br /><br /> Thank you.</p>
+        <p>We're enormously thankful to the following organizations and people who've funded YRS2012, as well as those who donated personally through <a href="http://www.peoplefund.it/young-rewired-state/">PeopleFund.it</a>.
     </div><!-- closing container -->
 </div><!-- closing section1 -->
 
