--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -8,21 +8,21 @@ title: Sponsors
     <div class="title"><h1>Young Rewired State Sponsors</h1></div>
         <p>We're enormously thankful to the following organizations
         and people who've funded YRS2012. We are also proud to have 
-	raised over £20,000 on <a href="http://www.peoplefund.it/young-rewired-state/">Peoplefund.it</a.<br /><br /> Thank you.</p>
+	raised over £20'000 on <a href="http://www.peoplefund.it/young-rewired-state/">Peoplefund.it</a.<br /><br /> Thank you.</p>
     </div><!-- closing container -->
 </div><!-- closing section1 -->
 
 <div id="section2">
     <div class="container">
         <h2>Chair of the Governors</h2>
-	<p>Position Vacant. Seeking payment of &pound;15,000. If you'd like to apply, <a href="mailto:hello@youngrewiredstate.org">School Secretary</a> would love to hear from you.</p>
+	<p>Position Vacant. Seeking payment of &pound;15'000. If you'd like to apply, <a href="mailto:hello@youngrewiredstate.org">School Secretary</a> would love to hear from you.</p>
     </div><!-- closing container -->
 </div><!-- closing section2 -->
 
 <div id="section3">
     <div class="container">
         <h2>Headmaster</h2>
-	<p>YRS2012 is currently without a Headmaster. Term starts in August, we'd appreciate applicants to apply (remember to include &pound;10,000 with your application!) before the middle of June. Again, please address your enquiries to the <a href="mailto:hello@youngrewiredstate.org">School Secretary</a>.</p>
+	<p>YRS2012 is currently without a Headmaster. Term starts in August, we'd appreciate applicants to apply (remember to include &pound;10'000 with your application!) before the middle of June. Again, please address your enquiries to the <a href="mailto:hello@youngrewiredstate.org">School Secretary</a>.</p>
     </div><!-- closing container -->
 </div><!-- closing section3 -->
 
