Thank you Google. Updating date, to include Sunday for FoC

--- a/centres/index.html
+++ b/centres/index.html
@@ -14,7 +14,7 @@ title: Centres
 
 	    <br /><br />
 
-            You will need to have wifi (very important) and have one person from your organisation as the main point of contact and available that week 6-11th August.
+            You will need to have wifi (very important) and have one person from your organisation as the main point of contact and available that week 6 &rarr; 12<sup>th</sup> August.
 
 	    <br/><br />
 
