--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: 2012
             </div> -->
     </div>
     <div class="container">
-    <div id="foc" class="title"><h1>YRS Festival of Code 6<sup>th</sup> &rarr; 11<sup>th</sup> August, 2012</h1></div>
+    <div id="foc" class="title"><h1>YRS Festival of Code 6<sup>th</sup> &rarr; 12<sup>th</sup> August, 2012</h1></div>
 
 	<iframe width="560" height="315" src="http://www.youtube-nocookie.com/embed/2Ws57UT_xX0" frameborder="0" allowfullscreen></iframe>
 
@@ -44,7 +44,7 @@ title: 2012
 
     <br /><br />
 
-	The event in 2012 runs from the 6th to the 11th August. During that week businesses, small and large, around the country act as hosts to local young people, YRS alumni, Rewired State mentors and other volunteers. A challenge is set to build digital products: mobile and web, using at least one piece of open data.
+	The event in 2012 runs from the 6<sup>th</sup> to the 12<sup>th</sup> August. During that week businesses, small and large, around the country act as hosts to local young people, YRS alumni, Rewired State mentors and other volunteers. A challenge is set to build digital products: mobile and web, using at least one piece of open data.
 
 	<br /><br />
 
