--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -8,8 +8,7 @@ title: Sponsors
     <div class="title"><h1>Young Rewired State Sponsors</h1></div>
         <p>We're enormously thankful to the following organizations
         and people who've funded YRS2012. If you would like to make
-        a personal donation, please use our crowd-sourced
-        <a href-="http://www.peoplefund.it/young-rewired-state/">Peoplefund.it</a> page.<br /><br /> Thank you.</p>
+        a personal donation, please contact <a href="mailto:emma@rewiredstate.org">Emma</a>.<br /><br /> Thank you.</p>
     </div><!-- closing container -->
 </div><!-- closing section1 -->
 
@@ -68,6 +67,10 @@ title: Sponsors
 <div id="section6">
     <div class="container">
         <h5>Senior Prefect</h5>
+
+        <div class="grid3">
+            <p><a href="http://google.co.uk/"><img alt="Google UK" src="/img/sponsors/google.png" /></a></p>
+        </div><!-- closing grid3 -->
 
         <div class="grid3">
             <p><a href="http://oreilly.com/"><img alt="O&apos; Reilly" src="/img/sponsors/oreilly.png" /></a></p>
