the lack of an apostrophe was disturbing

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ title: 2012
 
     <div class="grid3">
       <h2 id="teams">Build in teams</h2>
-      <p>The opportunity to build something cool with a team of other talented young developers. Work on bringing your ideas to life in code and help other developers bring theirs to life too.</p>
+      <p>The opportunity to build something cool with a team of other talented young developers. Work on bringing your ideas to life in code and help other developers do the same too.</p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
