switch to roles-based contact addreses

--- a/contact/index.html
+++ b/contact/index.html
@@ -18,13 +18,19 @@ title: Contact Us
 
                 <li><p><a href="mailto:angijlong@gmail.com">Angi</a> &#8212; parents: if you've got questions</p></li>
 
-                <li><p><a href="mailto:neil@youngrewiredstate.org">Neil</a> &#8212; centres, or prospective centres</p></li>
+                <li><p><a href="mailto:centres@youngrewiredstate.org">Neil</a> &#8212; centres, or prospective centres</p></li>
 
-                <li><p><a href="mailto:adam@youngrewiredstate.org">Adam</a> &#8212; for mentors, Bletchley Park/TNOMC/Festival of Code, operations stuff</p></li>
+                <li><p><a href="mailto:mentors@youngrewiredstate.org">Adam</a> &#8212; for mentors</p></li>
 
-                <li><p><a href="mailto:emma@rewiredstate.org">Emma</a> &#8212; sponsors, organization, and press</p></li>
+                <li><p><a href="mailto:sponsors@youngrewiredstate.org">Emma</a> &#8212; sponsors</p></li>
 
-                <li><p><a href="http://twitter.com/#!/youngrewired">Issy</a> &#8212; for social media (or <a href="mailto:isabell@youngrewiredstate.org">drop her an email</a>)</p></li>
+                <li><p><a href="mailto:festivalofcode@youngrewiredstate.org">Adam</a> &#8212; for the YRS Festival of Code</p></li>
+
+                <li><p><a href="mailto:ops@youngrewiredstate.org">Adam</a> &#8212; for all operational aspects of YRS</p></li>
+
+                <li><p><a href="mailto:press@youngrewiredstate.org">Emma</a> &#8212; press</p></li>
+
+                <li><p><a href="http://twitter.com/#!/youngrewired">Issy</a> &#8212; for social media (or <a href="mailto:socialmedia@youngrewiredstate.org">drop her an email</a>)</p></li>
 
                 <li><p><a href="mailto:hello@youngrewiredstate.org">All other enquiries</a></p></li>
             </ul>
