can haz posters

--- a/about/index.html
+++ b/about/index.html
@@ -34,6 +34,11 @@ title: About
 
             It is all run through sponsorship and volunteers and will always be.</p>
 
+            <h3>Poster</h3>
+            <p>To help promote YRS 2012, we've made some posters!</p>
+            <a href="http://youngrewiredstate.org/assets/poster1.pdf"><img src="/img/poster1.png" alt="YRS 2012 Poster 1" width="351px" height="248px"></a>
+            <a href="http://youngrewiredstate.org/assets/poster2.pdf"><img src="/img/poster2.png" alt="YRS 2012 Poster 2" width="351px" height="248px"></a>
+            <p>Feel free to download, print, and stick up where-ever you think might be nice places to stick up a poster. Please don't fly-poster, though!</p>
             <div class="clear"></div>
         </div><!-- closing leftdivblog -->
     </div><!-- closing container -->
