We're too big for Bletchley Park :o(

--- a/about/index.html
+++ b/about/index.html
@@ -20,11 +20,11 @@ title: About
 
             <br /><br />
 
-            At the end of the week everyone piles on coaches, trains and cars to the <a href="http://www.tnmoc.org/">The National Museum of Computing</a> at <a href="http://www.bletchleypark.org/ ">Bletchley Park</a> where they will have a night of camp and code, pizza and camaraderie. On the Saturday afternoon, they will show what they have made to an audience of their peers, Press, government and industry. Prizes are awarded and lives are changed.
+            At the end of the week everyone piles on coaches, trains and cars to the festival of code venue where they will have a night of camp and code, pizza and camaraderie. On the Saturday afternoon, they will show what they have made to an audience of their peers, Press, government and industry. Prizes are awarded and lives are changed.
 
             <br /><br />
 
-            After the week of activity, Young Rewired State'rs automatically become a part of the growing network ofyoung developers across the UK. Lifetime friendships are born as well as businesses. Mentor relationships are forged. The child is no longer coding alone.
+            After the week of activity, Young Rewired State'rs automatically become a part of the growing network of young developers across the UK. Lifetime friendships are born as well as businesses. Mentor relationships are forged. The child is no longer coding alone.
 
             <br /><br />
 
@@ -36,8 +36,8 @@ title: About
 
             <h3>Poster</h3>
             <p>To help promote YRS 2012, we've made some posters!</p>
-            <a href="http://youngrewiredstate.org/assets/poster1.pdf"><img src="/img/poster1.png" alt="YRS 2012 Poster 1" width="351px" height="248px"></a>
-            <a href="http://youngrewiredstate.org/assets/poster2.pdf"><img src="/img/poster2.png" alt="YRS 2012 Poster 2" width="351px" height="248px"></a>
+            <a href="/assets/poster1.pdf"><img src="/img/poster1.png" alt="YRS 2012 Poster 1" width="351px" height="248px"></a>
+            <a href="/assets/poster2.pdf"><img src="/img/poster2.png" alt="YRS 2012 Poster 2" width="351px" height="248px"></a>
             <p>Feel free to download, print, and stick up where-ever you think might be nice places to stick up a poster. Please don't fly-poster, though!</p>
             <div class="clear"></div>
         </div><!-- closing leftdivblog -->
