--- a/centres/index.html
+++ b/centres/index.html
@@ -38,7 +38,7 @@ title: Centres
 
 	    <br /><br />
 
-            On the Friday every centre needs to gather their young coders up and bring them all to <a href="http://tnmoc.org/">The National Museum of Computing</a>, <a href="http://www.bletchleypark.org/">Bletchley Park</a> for the festival of code. They will continue coding, hear lightning talks from interesting people, play on BBC Micros and sleep in tents readying themselves for a big show and tell on the Saturday to a mixture of Government, Press and Industry. There will be music. We will co-ordinate this migration with you and yes, it will include getting them home too &#8212; but we will help you, don't worry.</p>
+            On the Friday every centre needs to gather their young coders up and bring them all to the festival of code. They will continue coding, hear lightning talks from interesting people, play on BBC Micros and sleep in tents readying themselves for a big show and tell on the Saturday to a mixture of Government, Press and Industry. There will be music. We will co-ordinate this migration with you and yes, it will include getting them home too &#8212; but we will help you, don't worry.</p>
 
 	    <h3>Money</h3>
 
