--- a/index.html
+++ b/index.html
@@ -5,34 +5,6 @@ title: 2012
 
 <div id="section1">
   <div class="container" style="background: none;"></div>
-    <div id="html5header"><!-- <div id="quote-container" class="row-container">
-              <div class="quote first">
-                <a href="http://twitter.com/bennuk" title="@bennuk"><img src="http://a2.twimg.com/profile_images/1493783205/untitled_normal.png" /></a>
-                <p>Wow. Just wow. What an amazing day. Everyone at #YRS2011: you all ROCK.</p>
-              </div>
-              <div class="quote">
-                <a href="http://twitter.com/46Bit" title="@46Bit"><img src="http://a2.twimg.com/profile_images/1109439793/Untitled-1_normal.png" /></a>
-                <p>#yrs2011 has been awesome. Even more awesome than last year! :-D</p>
-              </div>
-              <div class="quote ">
-                <a href="http://twitter.com/kerron" title="@kerron"><img src="http://a2.twimg.com/profile_images/1475795132/kerronparchment_normal.png" /></a>
-                <p>#yrs2011 wish I was back at school. Some great opportunities here.. In this room!</p>
-              </div>
-              <div class="quote ">
-                <a href="http://twitter.com/RebeccaTung" title="@RebeccaTung"><img src="http://a1.twimg.com/profile_images/1473993446/IMG00001_normal.jpg" /></a>
-                <p>Had ridiculous amounts of fun at #yrs2011 this yr! Hope 2 come next yr</p>
-              </div>
-              <div class="quote ">
-                <a href="http://twitter.com/dpkendal" title="@dpkendal"><img src="http://a3.twimg.com/profile_images/1360018104/pixel_art_portrait--transparent_normal.png" /></a>
-                <p>"Just today, I’ve written over 200 lines of code. I could never have done that without the confidence #yrs2010 gave me."</p>
-              </div>
-              <div class="quote ">
-                <a href="http://twitter.com/46Bit" title="@46Bit"><img src="http://a2.twimg.com/profile_images/1109439793/Untitled-1_normal.png" /></a>
-                <p>"#yrs2010 got me to dive into Linux and expand to learn other interesting languages beside the typical web stack."</p>
-              </div>
-            </div>
-            </div> -->
-    </div>
     <div class="container">
     <div id="foc" class="title"><h1>YRS Festival of Code 6<sup>th</sup> &rarr; 12<sup>th</sup> August, 2012</h1></div>
 
@@ -51,7 +23,7 @@ title: 2012
 	It is free for every child to enter so long as they are aged 18 or under and have a rudimentary understanding of programming &#8212; although we do send out free resources in advance of the week for those who are unsure of their skills.</p>
 
 	<h3>Festival of code</h3>
-	<p>At the end of the week everyone piles on coaches, trains and cars to the <a href="http://www.tnmoc.org/">The National Museum of Computing</a> at <a href="http://www.bletchleypark.org/">Bletchley Park</a> where they will have a night of camp and code, pizza and camaraderie. On the Saturday afternoon they will show what they have made to an audience of their peers, Press, government and industry. Prizes are awarded and lives are changed.
+	<p>At the end of the week everyone piles on coaches, trains and cars to a lovely venue where they will have a night of camp and code, pizza and camaraderie. On the Saturday afternoon they will show what they have made to an audience of their peers, press, government and industry. Prizes are awarded and lives are changed.
 
 	<br /><br />
 
