--- a/parents/index.html
+++ b/parents/index.html
@@ -24,15 +24,15 @@ title: Parents' Information
 
             <h3>The Friday and Saturday festival</h3>
 
-            <p>This year all of the young people who take part in YRS are invited to spend the Friday night at <a href="http://www.tnmoc.org">the National Museum of Computing (TNMOC)</a> in the grounds of <a href="http://www.bletchleypark.org.uk/">Bletchley Park</a>. They will be sleeping in tents and coding, practising their presentations and so on &#8212; as well as all meeting each other and having a brilliant time.
+            <p>This year all of the young people who take part in YRS are invited to spend the Friday (and Saturday) night at the festival of code. They will be sleeping in tents and coding, practising their presentations and so on &#8212; as well as all meeting each other and having a brilliant time.
 
             <br /><br />
 
-            Each centre will organise the travel to Bletchley and will go with the young people and will continue to work with them during the 24 hours they are there. If your child is being mentored remotely, the mentor will organise this with you.
+            Each centre will organise the travel to the festival site and will go with the young people and will continue to work with them during the 24 hours they are there. If your child is being mentored remotely, the mentor will organise this with you.
 
             <br /><br />
 
-            There will be a huge show and tell on the Saturday in the grounds of TNMOC to a selection of Press, Government, Industry, Sponsors and people who want to support them &#8212; you are all welcome. There is no pre-requisite for the Saturday show and tell kids to have been at the camp over the night before, they can just come to The National Museum of Computing  on the Saturday morning for the afternoon presentations.</p>
+            There will be a huge show and tell on the Saturday to a selection of press, government, industry, sponsors and people who want to support them &#8212; you are all welcome. There is no pre-requisite for the Saturday show and tell kids to have been at the camp over the night before, they can just come on the Saturday morning for the presentations.</p>
 
             <h4>Check list for what your child will need to have:</h4>
 
@@ -45,7 +45,7 @@ title: Parents' Information
 
             <h5>For the Festival of Code</h5>
             <ul>
-                <li><p>Funds to get to Bletchley Park</p></li>
+                <li><p>Funds to get to the site</p></li>
                 <li><p>A tent</p></li>
                 <li><p>Sleeping bag</p></li>
                 <li><p>Toiletries</p></li>
@@ -81,10 +81,10 @@ title: Parents' Information
             <div class="title"><h4>When</h4></div>
             <p>August 6, 2012 09:30<br />→ August 12, 2012 13:00</p>
 
-            <div class="title"><h4>Where</h4></div>
+            <!-- <div class="title"><h4>Where</h4></div>
             <p>The National Museum <br />of Computing<br />
             Bletchley Park<br />
-            Bletchley</p>
+            Bletchley</p> -->
 
             <div class="title"><h4>Contacts</h4></div>
             <p>angijlong@gmail.com</p>
