--- a/mentors/index.html
+++ b/mentors/index.html
@@ -5,8 +5,6 @@ title: Mentors
 
 <div id="form">
     <div class="container">
-        <div id="leftdiv">
-
         <div class="title">
             <h1>Information for Mentors</h1>
         </div>
@@ -36,7 +34,7 @@ title: Mentors
 
                 <li>assist with the prep for final presentation</li>
 
-                <li>be invited to mentor at <a href="http://tnmoc.org/">TNMOC</a> (Bletchley Park) on the Friday/Saturday when all the kids are together</li>
+                <li>be invited to mentor at the festival of code on the Friday/Saturday when all the kids are together</li>
             </ul>
 
             <h3>FAQs</h3>
@@ -45,23 +43,20 @@ title: Mentors
                 A: Yes.</li>
 
                 <li><strong>Q: Will travel and subsistence be covered for mentors?</strong><br />
-                A: Assuming we get the sponsorship we are aiming for then yes. If not, there will be a hardship pot</li>
+                A: Assuming we get the sponsorship we are aiming for then yes. If not, there will be a hardship pot.</li>
 
                 <li><strong>Q: Do mentors need to be available every day of the week 6 &rarr; 12<sup>th</sup> August?</strong><br />
                 A: Not at all, we will be in touch and will work out which days you are free. But <em>be warned</em>, it is very addictive and compelling and you will want to be there, especially at the end!</li>
 
                 <li><strong>Q: Can I chat to a mentor who has done it before?</strong><br />
-                A: Yes, we plan to ask a few mentors from previous years to be available for queries. In the first instance please contact <a href="mailto:dave@bowsy.co.uk">David Durant</a></li>
+                A: Yes, we plan to ask a few mentors from previous years to be available for queries. In the first instance please contact <a href="mailto:dave@bowsy.co.uk">David Durant</a>.</li>
 
                 <li><strong>Q: Do I need to be CRB checked?</strong><br />
-                A: No but there will be no 1-2-1 mentoring, everything will happen in a single open space (this will be the centres to sort). We are looking into the rules for the festival at the end of the week. So watch this space</li>
+                A: No but there will be no 1-2-1 mentoring, everything will happen in a single open space (this will be the centres to sort). We are looking into the rules for the festival at the end of the week. So watch this space.</li>
             </ul>
 
             <!-- signup form -->
                 <iframe src="https://cms.youngrewiredstate.org/signupmentor.html" style="width: 750px; height: 1400px; border: none;"></iframe>
             <!-- close signup form -->
-
-        </div><!-- close leftdiv -->
-
     </div><!-- closing container -->
 </div><!-- closing form -->
