restore header image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: 2012
 
 <div id="section1">
   <div class="container" style="background: none;"></div>
+  <div id="html5header"></div>
     <div class="container">
     <div id="foc" class="title"><h1>YRS Festival of Code 6<sup>th</sup> &rarr; 12<sup>th</sup> August, 2012</h1></div>
 
