you need a laptop

--- a/kids/index.html
+++ b/kids/index.html
@@ -21,6 +21,10 @@ title: Kids
             support from others in the same boat as you &#8212; <strong>you
             are not alone</strong>.
 
+            <p>You will need a laptop throughout the week. If you have
+            a preference for dev-tools, you will want those installed
+            in advance.</p>
+
             <p>We'll be updating this page with questions/answers, as
             well as some more info, soon.</p>
 
