include revised (with new URI) signup form

--- a/kids/index.html
+++ b/kids/index.html
@@ -33,7 +33,7 @@ title: Kids
             you'll be hearing from Lawrence (on the phone).</p>
 
             <!-- signup form -->
-                <iframe src="https://cms.youngrewiredstate.org/signupperson.html" style="width: 750px; height: 1525px; border: none;"></iframe>
+                <iframe src="https://cms.youngrewiredstate.org/signupperson+" style="width: 750px; height: 1600px; border: none;"></iframe>
             <!-- close signup form -->
 
         </div><!-- close leftdiv -->
